add driver/admin annoucement email flags; and modify existing send emails function
